--- a/source/home.html
+++ b/source/home.html
@@ -1,4 +1,4 @@
-<p onclick="load('dogcom')">校园网网络配置</p>
-<p onclick="load('wallpaper')">壁纸</p>
+<p onclick="load('dogcom','md')" font-size="24px">校园网网络配置</p>
+<p onclick="load('wallpaper','html')" font-size="24px">壁纸</p>
 
 <script src="../script/index.js"></script>
