--- a/source/wallpaper.html
+++ b/source/wallpaper.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="../style/wallpaper.css" />
 
 <div class="image-container">
-	<button class="arrow left-arrow" onclick="change(-1)">&#9664;</button>
+	<button class="arrow left-arrow" onclick="change_img(-1)">&#9664;</button>
 	<img src="../assets/img/castorice.jpg" alt="castorice" />
-	<button class="arrow right-arrow" onclick="change(1)">&#9654;</button>
+	<button class="arrow right-arrow" onclick="change_img(1)">&#9654;</button>
 </div>
 
 <script src="../script/wallpaper.js"></script>
